# zig_test_MS5611_RP2040

./: CMakeLists.txt  build.zig
src/: i2c.c  i2c.h  main.c  main.zig  ms5611.zig  ws2812.c  ws2812.h  ws2812.zig
